# epievo

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac
EvoSim/EvoSim.xcodeproj/: project.pbxproj
EvoSim/EvoSim.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
EvoSim/EvoSim.xcodeproj/project.xcworkspace/xcuserdata/lizji.xcuserdatad/: UserInterfaceState.xcuserstate
doc/: SimulationScheme.tex  biblio.bib
example/: plot.R  plotEpiEvo.R  run.sh  test.param  test_gain.param  test_loss.param  test_meth.txt  test_stationary.param  tree.nwk
pyscripts/: evo_features.py  write_rootseq_to_file.py
rscripts/: compare_params.R  plot_local_paths.R  plot_sufficient_stats.R  simulate_continuous.R  sufficient_stats_conv.R  sufficient_stats_distr.R
src/: Makefile
src/common/: ContinuousTimeMarkovModel.cpp  ContinuousTimeMarkovModel.hpp  EmitDistro.cpp  EmitDistro.hpp  EndCondSampler.cpp  EndCondSampler.hpp  EndCondSampling.cpp  EndCondSampling.hpp  EpiEvoModel.cpp  EpiEvoModel.hpp  GlobalJump.cpp  GlobalJump.hpp  IndepSite.cpp  IndepSite.hpp  IntervalSampler.cpp  IntervalSampler.hpp  Makefile  ParamEstimation.cpp  ParamEstimation.hpp  Path.cpp  Path.hpp  PentetPath.cpp  PhyloTreePreorder.cpp  PhyloTreePreorder.hpp  Segment.cpp  Segment.hpp  SingleSampler.cpp  SingleSampler.hpp  SingleSiteSampler.cpp  SingleSiteSampler.hpp  StateSeq.cpp  StateSeq.hpp  TreeHelper.hpp  TripletPattern.cpp  TripletPattern.hpp  TripletSampler.cpp  TripletSampler.hpp  TwoStateSeq.hpp  epievo_utils.cpp  epievo_utils.hpp  (+6 more)
src/common/to_delete/: TripletPattern.cpp  jump.cpp  jump.hpp  param.cpp  param.hpp
src/harnesses/: MCMC_indep_site.cpp  MCMC_test.cpp  Makefile  README.md  end_cond_sampling_branch.cpp  end_cond_sampling_test.cpp  epievo_est_param_histories.cpp  extract_stats.cpp  forward_prop_test.cpp  forward_sim_stats.cpp  mcmc_test.cpp  metropolis_unif_test.cpp  pentet_rate_test.cpp  pruning_test.cpp  single_site_sampling_test.cpp  stationary_stats_est.cpp  test_sampling.cpp  triplet_end_cond_sampling.cpp
src/libepievo/: ContinuousTimeMarkovModel.cpp  ContinuousTimeMarkovModel.hpp  EmitDistro.cpp  EndCondSampling.cpp  EndCondSampling.hpp  EpiEvoModel.cpp  EpiEvoModel.hpp  GlobalJump.cpp  GlobalJump.hpp  IndepSite.cpp  IndepSite.hpp  IntervalSampler.cpp  Makefile  ParamEstimation.cpp  ParamEstimation.hpp  Path.cpp  Path.hpp  PhyloTree.cpp  PhyloTreePreorder.cpp  PhyloTreePreorder.hpp  Segment.cpp  Segment.hpp  SingleSiteSampler.cpp  SingleSiteSampler.hpp  TreeHelper.cpp  TreeHelper.hpp  TripletSampler.hpp  emission_utils.hpp  epievo_utils.cpp  epievo_utils.hpp
src/prog/: Makefile  average_paths.cpp  epievo_est_complete.cpp  epievo_est_histories.cpp  epievo_est_params_histories.cpp  epievo_initialization.cpp  epievo_sample_histories.cpp  epievo_sim.cpp  epievo_sim_pairwise.cpp  epievo_sim_pairwise_indep.cpp  estparam.cpp  evosim.cpp  extract_state_sequences.cpp  global_jumps_to_paths.cpp  scale_tree.cpp  test_sampling.cpp
src/prog/to_delete/: estparam.cpp  evosim.cpp
test/: convergence_tree.sh  est_params.sh  forward.sh  mcmc-em.sh  mcmc.sh  mcmc_tree.sh  run.sh  sample_root.sh  sim.sh  sim_multiple_rates.sh  test.param  test.sh  tree.nwk
test/input/: observed.states  test.nwk  tree.param
test/input/rates/: multiple_rates.txt
test/input/root/: 00000.rootseq  0000000.rootseq  0000000000.rootseq  001.rootseq  00100.rootseq  00110.rootseq  0011001100.rootseq  00111.rootseq  010.rootseq  01010.rootseq  011.rootseq  01100.rootseq  01110.rootseq  10000.rootseq  101.rootseq  10101.rootseq  11001.rootseq  11011.rootseq  11111.rootseq
